Floating Action Button e Checkbox

--- a/app/src/main/res/layout/activity_floating_action_button.xml
+++ b/app/src/main/res/layout/activity_floating_action_button.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#C657E7"
     tools:context=".FloatingActionButtonActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -17,6 +18,7 @@
         app:backgroundTint="#2BB2F2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:shapeAppearanceOverlay="@style/RoundedFabShape"
         app:srcCompat="@drawable/ic_adicionar_24"
         app:tint="#F0F0F0" />
 
@@ -24,7 +26,7 @@
         android:id="@+id/groupMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         app:constraint_referenced_ids="fabCamera,fabMusic" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -38,6 +40,7 @@
         app:layout_constraintBottom_toTopOf="@+id/fabAddButton"
         app:layout_constraintEnd_toEndOf="@+id/fabAddButton"
         app:layout_constraintStart_toStartOf="@+id/fabAddButton"
+        app:shapeAppearanceOverlay="@style/RoundedFabShape"
         app:srcCompat="@drawable/ic_add_foto_24"
         app:tint="#2BB2F2" />
 
@@ -52,6 +55,22 @@
         app:layout_constraintBottom_toTopOf="@+id/fabCamera"
         app:layout_constraintEnd_toEndOf="@+id/fabCamera"
         app:layout_constraintStart_toStartOf="@+id/fabCamera"
+        app:shapeAppearanceOverlay="@style/RoundedFabShape"
         app:srcCompat="@drawable/ic_add_music_24"
         app:tint="#2BB2F2" />
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/floatingActionButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:clickable="true"
+        android:text="Config"
+        app:backgroundTint="#DB69D8"
+        app:icon="@drawable/ic_launcher_foreground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fabAddButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 </androidx.constraintlayout.widget.ConstraintLayout>
