--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -66,6 +66,11 @@
             android:layout_height="wrap_content"
             android:text="Receber notificações" />
 
+        <Spinner
+            android:id="@+id/spinnerCategorias"
+            android:layout_width="match_parent"
+            android:layout_height="48dp" />
+
         <Button
             android:id="@+id/btEnviar"
             android:layout_width="match_parent"
