--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ModuloJetpack" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ModuloJetpack" parent="Theme.Material3.Dark.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="actionOverflowButtonStyle">@style/ActionOverflowButton</item>
+    </style>
+    
+    <style name="ActionOverflowButton" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="tint">@color/white</item>
     </style>
 
     <style name="Theme.ModuloJetpack" parent="Base.Theme.ModuloJetpack" />
